@@ -1,22 +1,16 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-MD5 30245bfcb26275091bb29c386c24efb8 ChangeLog 1831
-MD5 9a3024665c04c1eb6ef0f20c66b451dc metadata.xml 252
-MD5 6b15ef80e801d52373135e95e17580e8 gsasl-0.1.1.ebuild 1174
-MD5 3f8900fee353a932085b2734cd206123 gsasl-0.2.4.ebuild 1155
-MD5 e005ac4ea06ab6f6996cd97a17d0d361 gsasl-0.1.4.ebuild 1174
-MD5 659bc06c72cc659752bc0f74870ba269 gsasl-0.2.0.ebuild 1221
+MD5 33b4af11573795b5364861cc47c3c690 ChangeLog 1966
 MD5 555cb92e840eb6f3fc724a84c231278b gsasl-0.2.3.ebuild 1219
-MD5 c46f0baf4b7dac55f6b07f6dca4d3637 files/digest-gsasl-0.2.4 64
-MD5 82045137f4572bd6d9dc2cd30bad8990 files/digest-gsasl-0.2.0 64
-MD5 6f459b6dcf5ae7b72eeab7e098d7ce95 files/digest-gsasl-0.1.1 64
-MD5 c7e9afdbaed8d21536ef08e05e95e59e files/digest-gsasl-0.1.4 64
+MD5 3f8900fee353a932085b2734cd206123 gsasl-0.2.4.ebuild 1155
+MD5 9a3024665c04c1eb6ef0f20c66b451dc metadata.xml 252
 MD5 7d929a6a9bbfc8e1f94fa474c704dc17 files/digest-gsasl-0.2.3 64
+MD5 c46f0baf4b7dac55f6b07f6dca4d3637 files/digest-gsasl-0.2.4 64
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.0 (GNU/Linux)
 
-iD8DBQFB8opbQlM6RnzZP+IRAjmdAKCt90CFB5mqtQQFGCubWW+bmsefIwCeIa3H
-f6ffwWDfevceznONxMgpJ68=
-=v+Pf
+iD8DBQFB8pdnCHk4+ZoBpvsRAm5kAKDHXQdkTFhGp9xoS3Jw4Zcf2KorZACgp+rk
+XorKHr+g87yXKMCeJoVuslY=
+=jy8m
 -----END PGP SIGNATURE-----
