@@ -1,6 +1,10 @@
 # ChangeLog for net-misc/gsasl
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/gsasl/ChangeLog,v 1.13 2005/01/22 17:16:02 ticho Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/gsasl/ChangeLog,v 1.14 2005/01/22 18:09:43 slarti Exp $
+
+  22 Jan 2005; Tom Martin <slarti@gentoo.org> -gsasl-0.1.1.ebuild,
+  -gsasl-0.1.4.ebuild, -gsasl-0.2.0.ebuild:
+  Purge old versions.
 
   22 Jan 2005; Andrej Kacian <ticho@gentoo.org> gsasl-0.2.3.ebuild:
   Stable on x86.
